--- a/src/translation/ka/translation.json
+++ b/src/translation/ka/translation.json
@@ -7,25 +7,130 @@
   "sectionName": "ინოვაციები",
   "dropDown": [
     {
+      "id": 13,
       "navTitle": "ინვერსიული სიროფი"
     },
     {
+      "id": 14,
       "navTitle": "ინვერტაზა"
     },
     {
+      "id": 15,
       "navTitle": "თაფლის ნატურალობა"
     },
     {
+      "id": 16,
       "navTitle": "კანდი"
     },
     {
+      "id": 17,
       "navTitle": "ჭეო"
     },
     {
+      "id": 18,
       "navTitle": "ჯემები & ხილფაფები"
     },
     {
+      "id": 19,
       "navTitle": "ჩურჩხელა"
+    }
+  ],
+  "productDescription": [
+    {
+      "id": 1,
+      "img": "../../images/invertSyrup.jpg",
+      "heading": "ინვერსიული სიროფი  ",
+      "subheading": "ფუტკრის საკვებად და სასურსათოდ",
+      "paragraph": "დამახასიათებელი თავისებურებანი: ჯანმრთელობისათვის მავნე 5-ჰიდროქსიმეთილფურფურალისა (ჰმფ) და  მღებავი ნივთიერებების არარსებობა, ისინი წარმოიქმნება  შაქრის მჟავური ჰიდროლიზის პროცესში მისი გადაცხელების დროს. პროდუქტის მიღების ხერხი გულისხმობს  ფერმენტ ინვერტაზის ( საქარაზა, β -ფრუქტოფურანოზიდაზა) გამოყენებას არა უმეტეს 65 ± 20C  პირობებში და შემდგომში  81-82 მას.%-მდე  კონცენტრირებით..."
+    },
+    {
+      "id": 2,
+      "img": "",
+      "heading": "ინვერტაზა (საქარაზა, β -ფრუქტოფურანოზიდაზა)",
+      "subheading": "კომერციული სახელწოდებით „ჰიდროლიზ- აგენტი“- სასურსათო შაქრის ჰიდროლიზისათვის, ფუტკრისა და ადამიანისათვის. გამოიყენება აგრეთვე საკვები არეს კომპონენტად ზოგიერთი მიკრობული კულტურისათვის.",
+      "paragraph": " დამახასიათებელი თავისებურებანი: მოქმედებს როგორც ბუნებრივი კატალიზატორი საქაროზის მარტივ შაქრებად დასაშლელად წყალხსნარში, მავნე ნივთიერება 5-ჰიდროქსიმეთილფურფურალის (ჰმფ) წარმოქმნის გარეშე (მჟავური კატალიზატორებისაგან გამსხვავებით), მისი აქტიურობა გამოისახება საერთაშორისო ერთეულებით (ს.ე.), სტანდარტიზებულია შემავსებლით (დაფქვილი შაქარი), მზადდება  #212 00 269-002-2023 საწარმოსშიგა სტანდარტის  (შპს „დემეტრა“) მიხედვით და სტერილიზებულია გამოყენებული მიკრობული ბიომასის მოქმედების ჩასახშობად კატალიზის მსვლელობაში, დაცულია დაჟანგვისაგან ჭარბი წყლის წართმევით მომზადების პროცესში და ნეიტრალური გაზის (CO2) არეში შენახვით…"
+    },
+
+    {
+      "id": 3,
+      "img": "",
+      "heading": "თაფლის ნატურალობის დადგენა ექსპრესული მეთოდით ",
+      "paragraph": "მეთოდი დამყარებულია თაფლზე ხე-მცენარეთა ფოთლოვანი მასის წყლიანი ექსტრაქტის მაღალ ტემპერატურაზე ( 1000-მდე) ზემოქმედებით. ნარევში ჩნდება ნივთიერებათა ჯგუფის უხსნადი ნალექი, რომლის ოდენობა -მოცულობა ( თვითდალექვით მიღებული) დამოკიდებულია  თაფლის ბოტანიკურ წარმოშობაზე (5-10 მლ). პროდუქტის გაყალბების შემთხვევაში ნალექის ოდენობა მცირდება, ან სრულიად არ ჩნდება გამოსაკვლევ პროდუქტში თაფლის არარსებობის დროს. მეთოდი რეკომენდებულია თაფლის დიდ პარტიაში უხეში ფალსიფიკაციის (სუროგატის შემცველობა 35 მას.% და მეტი) აღმოსაჩენად..."
+    },
+    {
+      "id": 4,
+      "img": "",
+      "heading": "კანდი (ცომისებური საკვები)",
+      "subheading": "მთლიანად მონოსაქარიდების შემცველობით-ფუტკრისათვის",
+      "paragraph": "ტრადიციული ( შოლცისეული) შედგენილობისაგან განსხვავებით წინამდებარე ხერხი გულისხმობს ძირითადი ნედლეულის-სასურსათო შაქრის მთლიან ფერმენტულ ჰიდროლიზს, მიღებული პროდუქტის შესქელებას დაბალ (უსაფრთხო) ტემპერატურაზე  და სწრაფი დაკრისტალების მიღწევას, რითაც თავიდან აცილებულია: მრავალკომპონენტიანი, ძვირადღირებული მოწყობილობა, მაღალი ენერგეტიკული დანახარჯები, მიღწეულია საკვების ფიზიოლოგიური სრულყოფა და მნიშვნელოვანი ეკონომიკური ეფექტი..."
+    },
+    {
+      "id": 5,
+      "img": "",
+      "heading": "ჭეოს ეკოლოგიურად სუფთა პროდუქტის წარმოება სკის (ფიჭები ) გარეშე ",
+      "paragraph": "დამახასიათებელი თავისებურებანი. როგორც ბუნებრივ პირობებში, ისე საწარმოში ჭეო ადამიანის მიერ მიიღება ყვავილის მტვრიდან, მასში რძემჟავა მიკრობების დამატებით ფერმენტაციის განხორციელებით. საკითხის ასეთი გადაწყვეტა საშუალებას იძლევა, თავიდან ავიცილოთ სკაში არსებული უსუფთაობანი,მკვეთრად შევამციროთ დაკონსერვებისათვის საჭირო დრო და პროდუქტის წარმოების ღირებულება..."
+    },
+    {
+      "id": 6,
+      "img": "",
+      "heading": "მურაბებისა და ხილფაფების წარმოების ეკოლოგიურად უსაფრთხო ხერხი ",
+      "paragraph": "დამახასიათებელი თავისებურებანი: ჯანმრთელობისათვის მავნე 5-ჰიდროქსიმეთილფურფურალისა და ფენოლური ნაერთების დაჟანგვით წარმოქმნილი მღებავი ნივთიერებების არარსებობა; ხილისა და  ნახშირწყლოვანი სიროფის ნარევის კონცენტრირების  დაბალტემპერატურული რეჟიმის გამოყენების შესაძლებლობა პროცესის ხანგრძლივობის შემცირებით; მზა პროდუქტის სასაქონლო სახის (ფერი, სუნი, გემო, მექანიკური თვისებები) შენარჩუნება; გაუმჯობესებული ეკონომიკური მაჩვენებლები..."
+    },
+    {
+      "id": 7,
+      "img": "",
+      "heading": "ჩურჩხლის - ქართული დელიკატესის-მომზადების გაუმჯობესებული ტექნოლოგია ",
+      "paragraph": "დამახასიათებელი თავისებურებანი: მომზადების დროს 5-ჰიდროქსიმეთილფურფურალის (ჰმფ) წარმოქმნისა და ფენოლური ნაერთების დაჟანგვის თავიდან აცილება; ყურძნის ბადაგის დაბალ ტემპერატურაზე შესქელების დაჩქარებული რეჟიმი და ხორბლის ფქვილის ჰიდროლზატთან მისი ნაზავის კონდიცირებით ეკოლოგიურად უსაფრთხო პროდუქტის მიღება; პროცესის საერთო ხანგრძლივობის შემცირება 165-დან 28-30 საათამდე; გაუმჯობესებული ეკონომიკური მაჩვენებლები..."
+    }
+  ],
+  "servicePageDetails": [
+    {
+      "id": 21,
+      "paragraph": "ზემოთ მოტანილი WEB-გვერდის წარმოდგენით ავტორი დაინტერესებული საწარმოების წინაშე იღებს შემდეგ ვალდებულებებს:"
+    },
+    {
+      "id": 22,
+      "paragraph": " -უზრუნველყოს დამკვეთის მიერ შერჩეული თემატიკის დანერგვა მის საწარმოში შემდეგი პროცედურების  გავლით: შემუშავებული ტექნოლოგიის გაცნობა საწარმოს მესვეურთათვის, მზა პროდუქციის ნიმუშების წარმოდგენა მათი მახასიათებლებით;  ტექნოლოგიური ხაზის აღწერა დასახული სამუშაოს შესასრულებლად და საწარმოს თანამშრომლებთან ერთად დანადგარების ოპტიმალური კონსტრუქციების შერჩევა, საჭირო საკონსულტაციო სამუშაოს გაწევა მოწყობილობის  დამონტაჟებისა და ამოქმედებისათვის; პროდუქციის საცდელი პარტიების დამზადებისას ტექნიკურ- ეკონომიკური მაჩვენებლების აღება და ეკონომიკური ეფექტის საორიენტაციო გაანგარიშება; საბოლოოდ ღონისძიების პერსპექტიულობის განსაზღვრა და ბაზარზე არსებულ ანალოგებთან  შედარებით მიღებული პროდუქციის წარმოების უპირატესობის  თვალსაჩინოების უზრუნველყოფა;"
+    },
+    {
+      "id": 23,
+      "paragraph": "  - იმ კომპონენტების გამოყენებისას, რომლებიც კონკრეტული ტექნოლოგიის ნოუ-ჰაუს შეადგენენ (მაგ., ჰიდროლიზ-აგენტი ინვერსიული სიროფის დასამზადებლად, დამაკრისტალებელი დედო კანდის წარმოებისათვის, მცენარეული რეაგენტები თაფლის ნატურალობის დასადგენად, ჭეოს წარმოებისათვის მიკრობული კულტურისა და მისი კვებისათვის აუცილებელი ინგრედიენტების კომპოზიცია), ავტორმა უზრუნველყოს მათი წარმოება მის მიერ შერჩეულ ობიექტზე ღირებულების წინასწარი განსაზღვრით;"
+    },
+    {
+      "id": 24,
+      "paragraph": " - ავტორისეული შრომის ანაზღაურებისათვის საწარმოთა მესვეურებთან ერთად და მათი თანხმობით დაადგინოს ჰონორარის ზომა %-ულად პროდუქციის ღირებულებიდან  და მისი ანაზღაურების პირობები. ამისათვის გაითვალისწინოს მოქმედი კანონმდებლობის მოთხოვნები კონკრეტულ სფეროში ( სოფლის მეურნეობისა და კვების პროდუქტების საწარმოთათვის)."
+    }
+  ],
+  "aboutPageDetails": [
+    {
+      "id": 25,
+      "heading": "ავტორი: ",
+      "paragraph": "მაძღარაშვილი გოგი (გიორგი), სოფლის მეურნეობის მეცნიერებათა დოქტორი, პროფესორი, 1937წ. დაბადებული;"
+    },
+    {
+      "id": 26,
+      "heading": "სამეცნიერო შრომები:",
+      "paragraph": "111 სამეცნიერო პუბლიკაცია, მათ შორის 2 მონოგრაფია, 1 სახელმძღვანელოს თანაავტორი;  12 გამოგონება, მათ შორის დარეგისტრირებულია საავტორო უფლებით 4;"
+    },
+    {
+      "id": 27,
+      "heading": "სამეცნიერო გამოცდილება: ",
+      "paragraph": "ეწევა სამეცნიერო- კვლევით საქმიანობას 1961 წლიდან,  1965წ. მიენიჭა ს.მ. მეცნ. კანდიდატის ხარისხი,  1988წ.- ს. მ. მეცნ. დოქტორისა;"
+    },
+    {
+      "id": 28,
+      "heading": "სამეცნიერო კადრების მომზადება: ",
+      "paragraph": "ხუთი სპეციალისტის მომზადება მეცნიერებათა კანდიდატების ხარისხის მინიჭებით, დაჯილდოებულია საპატიო ნიშნის ორდენით;"
+    },
+    {
+      "id": 29,
+      "heading": "WEB-გვერდში შეტანილი მასალის რაობა:",
+      "paragraph": "ასახავს ინოვაციურ ტექნოლოგიებს, რომელთა უმეტესი ნაწილის წარმოჩენა ავტორისეულია."
+    },
+    {
+      "id": 30,
+      "heading": "WEB-გვერდის შექმნის მიზანი:  ",
+      "paragraph": "სასოფლო- სამეურნეო და კვების მრეწველობის საწარმოებში ინოვაციური ტექნოლოგიების დანერგვა, რომლის არსსაც შეადგენს: საწარმოთა მესვეურებისათვის  ტექნოლოგიების გაცნობა, ავტორის მიერ შექმნილი საცდელი ნიმუშების ჩვენებით; ტექნოლოგიური პროცესისა  და ხაზების დეტალური აღწერა; პროცესების დემონსტრირება მზა პროდუქტების საცდელი ნიმუშების მიღებით იმ ანგარიშით, რომ მომსახურე პერსონალმა სრულყოფილად აითვისოს საწარმოო პროცესის მიმდინარეობა."
     }
   ]
 }
