--- a/src/translation/ru/translation.json
+++ b/src/translation/ru/translation.json
@@ -7,25 +7,133 @@
   "sectionName": "Инновации",
   "dropDown": [
     {
+      "id": 13,
       "navTitle": "Инвертный сироп "
     },
     {
+      "id": 14,
       "navTitle": "Инвертаэа "
     },
     {
+      "id": 15,
       "navTitle": "Натуральность меда "
     },
     {
+      "id": 16,
       "navTitle": "Канди"
     },
     {
+      "id": 17,
       "navTitle": "Перга"
     },
     {
+      "id": 18,
       "navTitle": "Варенья & Повидла"
     },
     {
+      "id": 19,
       "navTitle": "Чурчхела"
+    }
+  ],
+  "productDescription": [
+    {
+      "id": 1,
+      "img": "../../images/invertSyrup.jpg",
+      "heading": "Инвертпый сироп",
+      "subheading": "для подкармливания  пчел и для пищевых нужд",
+      "paragraph": "Характерные особенности способа:   Отсутствие вредного для здоровья 5-гидроксиметилфурфураля и красящих веществ,  образуемых при нагреве сахарного сиропа в случае кислотного гидролиза последнего;  способ подразумевает применение фермента инвертазы ( сахараза,  β - фруктофуранозидаза) с нагревом не более 65-67оC  с дальнейшим концентрированием раствора до 81-82мас. %..."
+    },
+    {
+      "id": 2,
+      "img": "",
+      "heading": "Инвертаэа (сахараза,  β -фруктофуранозидаза ) ",
+      "subheading": "с коммерческим названием “ гидролиз-агент”,  гидролизующий сахарозу – для пчел и человека. Применяется также  как компонент питательной среды для некоторых микробных культур.",
+      "paragraph": " Характерные особенности:  действует как естественный катализатор  для расщепления сахарозы в водном растворе  без образования вредного вещества  5-гидроксиметилфурфураль ( ГМФ), в отличие от кислотного гидролиза.  Ее активность выражается в международных единицах (м.  е.  ),  для стандартизации наполнителем является сахарная пудра,  готовится в соответствии со  стандартом предприятия №212 00 269 -002-2019 ( ООО “ Деметра” ) и стерилизована для подавления  действия микробной биомассы в процессе гидролиза,  защищена от окисления удалением лишней влаги в процессе производства и хранением в среде нейтральных газов…"
+    },
+
+    {
+      "id": 3,
+      "img": "",
+      "heading": "Натуральность меда ",
+      "subheading": "экспрессный метод установления",
+      "paragraph": "მეთოდი დამყარებულია თაფლზე ხე-მცენარეთა ფოთლოვანი მასის წყლიანი ექსტრაქტის მაღალ ტემპერატურაზე ( 1000-მდე) ზემოქმედებით. ნარევში ჩნდება ნივთიერებათა ჯგუფის უხსნადი ნალექი, რომლის ოდენობა -მოცულობა ( თვითდალექვით მიღებული) დამოკიდებულია  თაფლის ბოტანიკურ წარმოშობაზე (5-10 მლ). პროდუქტის გაყალბების შემთხვევაში ნალექის ოდენობა მცირდება, ან სრულიად არ ჩნდება გამოსაკვლევ პროდუქტში თაფლის არარსებობის დროს. მეთოდი რეკომენდებულია თაფლის დიდ პარტიაში უხეში ფალსიფიკაციის (სუროგატის შემცველობა 35 მას.% და მეტი) აღმოსაჩენად..."
+    },
+    {
+      "id": 4,
+      "img": "",
+      "heading": "Канди (тестообразный корм) из моносахаридов",
+      "subheading": "для пчел",
+      "paragraph": "В отличие от традиционного состава  (по Шольцу)  предлагаемый способ приготовления канди подразумевает полный ферментативный гидролиз основного сырья ( пищевой сахар),  концентрирование гидролизата  при низкой (безопасной) температуре и обеспечение  быстрой кристаллизации,  чем предотвращаются  необходимость многокомпонентного,  дорогостоящего оборудования,  высокие энергетические затраты,  достигаются физиологическое совершенство подкормки и значительный экономический эффект…"
+    },
+    {
+      "id": 5,
+      "img": "",
+      "heading": "Перга",
+      "subheading": "производство экологически чистого продукта вне улья (соторамок)",
+      "paragraph": "Характерные особенности : по характеру производства имеется две разновидности:  а)консервированная пчелами в сотах цветочная пыльца с медом и б) на предприятиях создается  из этого же материала путем ферментации с участием молочнокислых бактерий.  Последний способ позволяет предотвращать загрязнение продукта ульевыми нечистотами,  резко сократить продолжительность консервации и стоимость производства продукта…"
+    },
+    {
+      "id": 6,
+      "img": "",
+      "heading": "Варенья и повидла– производство экологически чистой  продукции ",
+      "paragraph": "Характерные особенности:  отсутствие вредного для здоровья  5-гидроксиметилфурфураля и красящих веществ,  производимых  в результате окисления фенольных соединений;  возможность применения низкотемпературного режима концентрирования смеси фруктового сырья  с углеводным сиропом;  сохранение товарного  вида ( окраска,  запах,  вкус,  механические свойства) готовой продукции;  улучшенные экономические  показатели…"
+    },
+    {
+      "id": 7,
+      "img": "",
+      "heading": "Чурчхела-грузинский деликатес",
+      "subheading": "улучшенная  технология производства",
+      "paragraph": "Характерные особенности:    В процессе производства предотвращено образование вредного вещества 5-гидроксиметилфурфураль (ГМф)  и окисление фенольных соединений (в отличие от традиционной технологии);  достигнуто ускоренное сгущение виноградного сока в низкотемпературном режиме и получение экологически чистого продукта при смешивании с гидролизатом пшеничной муки и последующей оптимизацией состава смеси;  сокращена общая продолжительность процесса со 165 до 28-30 часов ; улучшены экономические показатели производства…"
+    }
+  ],
+  "servicePageDetails": [
+    {
+      "id": 21,
+      "paragraph": "Представляя вышеприведенную WEB-страницу  автор  берет на себя обязательства перед заинтересованными предприятиями:"
+    },
+    {
+      "id": 22,
+      "paragraph": " - Обеспечить внедрение избранной заказчиком тематики в его предприятии в следующей последовательности:  ознакомление предпринимателя и его персонала с разработанной технологией с показом образцов готовой продукции с характерными показателями;  описание технологической линии для выполнения намеченного процесса и подбор оптимальных конструкций оборудования совместно с работниками предприятия,   проведение необходимой консультации при монтаже и вводе  в эксплуатацию оборудования,  выбор нужных  технико- экономических показателей при изготовлении опытных партий  продукции  и расчет ориентировочного экономического эффекта;  в конечном  счете определение перспективности выбранного технологического процесса  и обеспечение показа его наглядного преимущества в сравнении с аналогичными продуктами,   находящимися на рынке;"
+    },
+    {
+      "id": 23,
+      "paragraph": " - При использовании компонентов,  составляющих ноу-хау конкрентной технологии ( напр.,   гидролиз- агент для изготовления инвертного сиропа,  кристаллизующая закваска для  канди –теста, препараты растительные для установления натуральности меда,  композиция микробной культуры и нужных  ингредиентов для ее питания  при изготовлении перги),  автор обеспечивает их производство на специализированном предприятии,  заранее установив их ориентировочную стоимость;"
+    },
+    {
+      "id": 24,
+      "paragraph": " -Для оплаты труда автора представители производства вместе с ним устанавливают размер гонорара в %-ах от стоимости продукции,  а также другие условия оплаты труда,  предусмотрев требования существующего  законодательства в конкретной сфере деятельности ( для предприятий сельского хозяйства и пищевых продуктов)."
+    }
+  ],
+  "aboutPageDetails": [
+    {
+      "id": 25,
+      "heading": "Автор:",
+      "paragraph": "Мадзгарашвили Гоги (Георгий),  доктор с.-  х.  наук,  профессор,  1937 г.  рождения."
+    },
+    {
+      "id": 26,
+      "heading": "Научные труды:",
+      "paragraph": "111 научных публикаций,  в т. ч.  две монографии,  соавтор одного учебника,  12 изобретений,  в т.  ч.  4-х зарегистрированных авторским правом."
+    },
+    {
+      "id": 27,
+      "heading": "Опыт ведения НИР: ",
+      "paragraph": "ведет ее с 1961 г.,   в 1965 г.  присуждена ученая степень кандидата с. –х.  наук,  в 1988г.-   степень  доктора с. – х.  наук."
+    },
+    {
+      "id": 28,
+      "heading": "Подготовка научных кадров: ",
+      "paragraph": "им подготовлено 5 специалистов с присуждением ученых степеней кандидатов наук,  за плодотворную научно-педагогическую работу награжден Орденом почетного знака."
+    },
+    {
+      "id": 29,
+      "heading": "О материале,  внесенном в WEB-страницу: ",
+      "paragraph": "изложены инновационные технологии,  основная часть которых принадлежит лично автору."
+    },
+    {
+      "id": 30,
+      "heading": "Цель создания WEB-страницы:  ",
+      "paragraph": "внедрение инновационных технологий в предприятия сельскохозяйственной и  пищевой промышленности,  суть которых составляет:  ознакомление предпринимателей с этими технологиями  с показом  опытных образцов продукции,  созданных по инициативе автора;  детальное объяснение технологических процессов и линий,  демонстрация процессов с выработкой опытных образцов готовой продукции  с расчетом овладения производственными процессами со стороны обслуживающего персонала."
     }
   ]
 }
