--- a/src/translation/ka/translation.json
+++ b/src/translation/ka/translation.json
@@ -132,5 +132,22 @@
       "heading": "WEB-გვერდის შექმნის მიზანი:  ",
       "paragraph": "სასოფლო- სამეურნეო და კვების მრეწველობის საწარმოებში ინოვაციური ტექნოლოგიების დანერგვა, რომლის არსსაც შეადგენს: საწარმოთა მესვეურებისათვის  ტექნოლოგიების გაცნობა, ავტორის მიერ შექმნილი საცდელი ნიმუშების ჩვენებით; ტექნოლოგიური პროცესისა  და ხაზების დეტალური აღწერა; პროცესების დემონსტრირება მზა პროდუქტების საცდელი ნიმუშების მიღებით იმ ანგარიშით, რომ მომსახურე პერსონალმა სრულყოფილად აითვისოს საწარმოო პროცესის მიმდინარეობა."
     }
+  ],
+  "contactPage": [
+    {
+      "id": 31,
+      "title": "ელექტრონული ფოსტა",
+      "info": "gmadzgarashvili@yahoo.com"
+    },
+    {
+      "id": 32,
+      "title": "მობილურის ნომერი",
+      "info": "+995 555 39 07 56"
+    },
+    {
+      "id": 33,
+      "title": "მისამართი",
+      "info": "გ.სააკაძის ქუჩა #45, თბილისი,საქართველო"
+    }
   ]
 }
