--- a/src/translation/ru/translation.json
+++ b/src/translation/ru/translation.json
@@ -135,5 +135,22 @@
       "heading": "Цель создания WEB-страницы:  ",
       "paragraph": "внедрение инновационных технологий в предприятия сельскохозяйственной и  пищевой промышленности,  суть которых составляет:  ознакомление предпринимателей с этими технологиями  с показом  опытных образцов продукции,  созданных по инициативе автора;  детальное объяснение технологических процессов и линий,  демонстрация процессов с выработкой опытных образцов готовой продукции  с расчетом овладения производственными процессами со стороны обслуживающего персонала."
     }
+  ],
+  "contactPage": [
+    {
+      "id": 31,
+      "title": "Злектронная почта",
+      "info": "gmadzgarashvili@yahoo.com"
+    },
+    {
+      "id": 32,
+      "title": "Мобильный",
+      "info": "+995 555 39 07 56"
+    },
+    {
+      "id": 33,
+      "title": "Адрес",
+      "info": "Г.саакадзе стр. #45, Тбилиси,Георгия"
+    }
   ]
 }
