styling service and about us page

--- a/src/translation/en/translation.json
+++ b/src/translation/en/translation.json
@@ -109,34 +109,34 @@
   "aboutPageDetails": [
     {
       "id": 25,
-      "heading": "Author:",
+      "heading": "Author",
       "paragraph": "Madzgarashvili Gogi (George), Doctor of Agricultural Sciences, Professor, born in 1937;"
     },
     {
       "id": 26,
-      "heading": "Scientific works:",
+      "heading": "Scientific works",
       "paragraph": "111 scientific publications, including 2 monographs, co-author of 1 textbook; 12 inventions, including 4 registered copyrights;"
     },
     {
       "id": 27,
-      "heading": "Scientific experience: ",
+      "heading": "Scientific experience ",
       "paragraph": "He has been engaged in scientific-research activities since 1961, in 1965 the Candidate of Agricultural Sciences awarded, in 1988 s- Doctor of Agricultural Sciences;"
     },
 
     {
       "id": 28,
-      "heading": "Training of scientific personnel: ",
+      "heading": "Training of scientific personnel ",
       "paragraph": "Training of five specialists with the degree of Candidates of Sciences; He has received the Order of the Badge of Honor;"
     },
     {
       "id": 29,
-      "heading": "Web content:",
-      "paragraph": "includes innovative technologies, most of which belong to the author."
+      "heading": "Web content",
+      "paragraph": "Includes innovative technologies, most of which belong to the author."
     },
     {
       "id": 30,
       "heading": "The purpose of the website:  ",
-      "paragraph": "is to introduce innovative technologies in agricultural and food industry enterprises, the essence of which is to: acquaint the heads of enterprises with technologies by demonstrating experimental samples created by the author; provide a detailed description of the technological process and lines; demonstrate processes by obtaining test samples of finished products so that the service personnel can fully master the production process."
+      "paragraph": "Introduce innovative technologies in agricultural and food industry enterprises, the essence of which is to: acquaint the heads of enterprises with technologies by demonstrating experimental samples created by the author; provide a detailed description of the technological process and lines; demonstrate processes by obtaining test samples of finished products so that the service personnel can fully master the production process."
     }
   ],
   "contactPage": [
