--- a/src/translation/en/translation.json
+++ b/src/translation/en/translation.json
@@ -45,7 +45,7 @@
     },
     {
       "id": 2,
-      "img": "",
+      "img": "../../images/invertase.jpg",
       "heading": "Invertase (sucrase, β-fructofuranosidase)",
       "subheading": "Under the trade name “Hydrolytic Agent” — for the hydrolysis of food sugar, for bees and humans.It is also used as a nutrient medium for some microbial cultures.",
       "paragraph": " Characteristics: works to catalyze the cleavage of sucrose into simple sugars in an aqueous solution, without the formation of the harmful substance 5-hydroxymethylfurfural (HMF) (unlike acid catalysts). Its activity is expressed in international units (IU), standardized with a filler (ground sugar), manufactured according to the standard of company # 212 00 269-002-2023 (“Demetra” LLC), sterilized to suppress the activity of microbial biomass used in catalysis, protected from oxidation by removing excess water during preparation, and storing it in a neutral gas (CO2) area."
@@ -60,7 +60,7 @@
     },
     {
       "id": 4,
-      "img": "",
+      "img": "../../images/candy.jpg",
       "heading": "Candy(paste feed)",
       "subheading": "Containing only monosaccharides for bees",
       "paragraph": "Unlike the traditional method of making candy (by Scholz), this  method involves complete enzymatic hydrolysis of the basic raw material - food sugar, thickening of the resulting product at a low (safe) temperature and achieving rapid crystallization, which avoids: multicomponent, expensive equipment, high energy costs, the physiological perfection of food and a significant economic effect are achieved…"
@@ -74,7 +74,7 @@
     },
     {
       "id": 6,
-      "img": "",
+      "img": "../../images/appleJam.jpg",
       "heading": "Jams and purees",
       "subheading": "Environmentally sound technologies for the production",
       "paragraph": "Characteristics: Absence of coloring substances formed during the oxidation of harmful 5-hydroxymethylfurfural and phenolic compounds; possibility of using a low-temperature mode of concentration of a mixture of fruit and carbohydrate syrup by reducing the duration of the process; preservation of the presentation of the finished product (color, smell, taste, mechanical properties); improved economic indicators..."
