add innovations info and style

--- a/src/translation/ru/translation.json
+++ b/src/translation/ru/translation.json
@@ -139,7 +139,7 @@
   "contactPage": [
     {
       "id": 31,
-      "title": "Злектронная почта",
+      "title": "Зл. почта",
       "info": "gmadzgarashvili@yahoo.com"
     },
     {
