--- a/src/translation/ka/translation.json
+++ b/src/translation/ka/translation.json
@@ -45,7 +45,7 @@
     },
     {
       "id": 2,
-      "img": "",
+      "img": "../../images/invertase.jpg",
       "heading": "ინვერტაზა (საქარაზა, β -ფრუქტოფურანოზიდაზა)",
       "subheading": "კომერციული სახელწოდებით „ჰიდროლიზ- აგენტი“- სასურსათო შაქრის ჰიდროლიზისათვის, ფუტკრისა და ადამიანისათვის. გამოიყენება აგრეთვე საკვები არეს კომპონენტად ზოგიერთი მიკრობული კულტურისათვის.",
       "paragraph": " დამახასიათებელი თავისებურებანი: მოქმედებს როგორც ბუნებრივი კატალიზატორი საქაროზის მარტივ შაქრებად დასაშლელად წყალხსნარში, მავნე ნივთიერება 5-ჰიდროქსიმეთილფურფურალის (ჰმფ) წარმოქმნის გარეშე (მჟავური კატალიზატორებისაგან გამსხვავებით), მისი აქტიურობა გამოისახება საერთაშორისო ერთეულებით (ს.ე.), სტანდარტიზებულია შემავსებლით (დაფქვილი შაქარი), მზადდება  #212 00 269-002-2023 საწარმოსშიგა სტანდარტის  (შპს „დემეტრა“) მიხედვით და სტერილიზებულია გამოყენებული მიკრობული ბიომასის მოქმედების ჩასახშობად კატალიზის მსვლელობაში, დაცულია დაჟანგვისაგან ჭარბი წყლის წართმევით მომზადების პროცესში და ნეიტრალური გაზის (CO2) არეში შენახვით…"
@@ -59,7 +59,7 @@
     },
     {
       "id": 4,
-      "img": "",
+      "img": "../../images/candy.jpg",
       "heading": "კანდი (ცომისებური საკვები)",
       "subheading": "მთლიანად მონოსაქარიდების შემცველობით-ფუტკრისათვის",
       "paragraph": "ტრადიციული ( შოლცისეული) შედგენილობისაგან განსხვავებით წინამდებარე ხერხი გულისხმობს ძირითადი ნედლეულის-სასურსათო შაქრის მთლიან ფერმენტულ ჰიდროლიზს, მიღებული პროდუქტის შესქელებას დაბალ (უსაფრთხო) ტემპერატურაზე  და სწრაფი დაკრისტალების მიღწევას, რითაც თავიდან აცილებულია: მრავალკომპონენტიანი, ძვირადღირებული მოწყობილობა, მაღალი ენერგეტიკული დანახარჯები, მიღწეულია საკვების ფიზიოლოგიური სრულყოფა და მნიშვნელოვანი ეკონომიკური ეფექტი..."
